# internal/app/controller/http/v1/apiV1.go
@@ -224,6 +224,37 @@ func (v1 httpV1Implem) GetUserBy(w http.ResponseWriter, r *http.Request, params 
 	})
 }
 
+func (v1 httpV1Implem) GetRolesBy(w http.ResponseWriter, r *http.Request, params GetRolesByParams) {
+
+	var roles []domain.UserToCompany
+
+	if params.CompanyUUID == nil && params.UserUUID == nil {
+		respondWithError(w, r, "Must supply company or user UUID", http.StatusBadRequest)
+		return
+	} else if params.CompanyUUID != nil && params.UserUUID != nil {
+		respondWithError(w, r, "This is coming soon", http.StatusNotImplemented)
+		return
+	} else if params.UserUUID != nil {
+		respondWithError(w, r, "This is coming soon", http.StatusNotImplemented)
+		return
+	} else if params.CompanyUUID != nil {
+		id, err := uuid.Parse(*params.CompanyUUID)
+
+		if err != nil {
+			respondWithError(w, r, fmt.Sprintf("error: %v", err), http.StatusBadRequest)
+			return
+		}
+
+		roles, err = v1.userToCompanyUseCase.FindByCompanyUUID(r.Context(), id)
+		if err != nil {
+			respondWithError(w, r, fmt.Sprintf("error: %v", err), http.StatusBadRequest)
+			return
+		}
+	}
+
+	respondWithJson(w, r, http.StatusOK, roles)
+}
+
 // Helper Functions //
 func (v1 httpV1Implem) loadDomainUser(r *http.Request) (domain.User, error) {
 	user, err := v1.authbossAuthenticator.CurrentUser(r)
